Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -772,6 +772,10 @@ footer {
          background-color: var(--accent-color);
          color: var(--text-color-on-accent);
     }
+
+    .services-section .service {
+        padding: 1.5rem 1rem;
+    }
 }
 
 @media (min-width: 1200px) {
